--- a/images/favicon-set/manifest.json
+++ b/images/favicon-set/manifest.json
@@ -11,25 +11,25 @@
  "gcm_sender_id_comment": "Lk21",
  "icons": [
   {
-   "src": "\/wp-content\/themes\/dunia21\/images\/favicon-set\/android-icon-36x36.png",
+   "src": "\/android-icon-36x36.png",
    "sizes": "36x36",
    "type": "image\/png",
    "density": "0.75"
   },
   {
-   "src": "\/wp-content\/themes\/dunia21\/images\/favicon-set\/android-icon-48x48.png",
+   "src": "\/android-icon-48x48.png",
    "sizes": "48x48",
    "type": "image\/png",
    "density": "1.0"
   },
   {
-   "src": "\/wp-content\/themes\/dunia21\/images\/favicon-set\/android-icon-72x72.png",
+   "src": "\/android-icon-72x72.png",
    "sizes": "72x72",
    "type": "image\/png",
    "density": "1.5"
   },
   {
-   "src": "\/wp-content\/themes\/dunia21\/images\/favicon-set\/android-icon-96x96.png",
+   "src": "\/android-icon-96x96.png",
    "sizes": "96x96",
    "type": "image\/png",
    "density": "2.0"
