--- a/images/favicon-set/manifest.json
+++ b/images/favicon-set/manifest.json
@@ -11,43 +11,43 @@
  "gcm_sender_id_comment": "Lk21",
  "icons": [
   {
-   "src": "\/android-icon-36x36.png",
+   "src": "android-icon-36x36.png",
    "sizes": "36x36",
    "type": "image\/png",
    "density": "0.75"
   },
   {
-   "src": "\/android-icon-48x48.png",
+   "src": "android-icon-48x48.png",
    "sizes": "48x48",
    "type": "image\/png",
    "density": "1.0"
   },
   {
-   "src": "\/android-icon-72x72.png",
+   "src": "android-icon-72x72.png",
    "sizes": "72x72",
    "type": "image\/png",
    "density": "1.5"
   },
   {
-   "src": "\/android-icon-96x96.png",
+   "src": "android-icon-96x96.png",
    "sizes": "96x96",
    "type": "image\/png",
    "density": "2.0"
   },
   {
-   "src": "\/wp-content\/themes\/dunia21\/images\/favicon-set\/android-icon-144x144.png",
+   "src": "android-icon-144x144.png",
    "sizes": "144x144",
    "type": "image\/png",
    "density": "3.0"
   },
   {
-   "src": "\/wp-content\/themes\/dunia21\/images\/favicon-set\/android-icon-192x192.png",
+   "src": "android-icon-192x192.png",
    "sizes": "192x192",
    "type": "image\/png",
    "density": "4.0"
   },
   {
-    "src": "\/wp-content\/themes\/dunia21\/images\/favicon-set\/chrome-200x200.jpg",
+    "src": "chrome-200x200.jpg",
     "sizes": "200x200",
     "type": "image\/jpeg",
     "density": "4.0"
